# markdown-exec

./: .copier-answers.yml  .coverage-tmp.html  .gitignore  404.html  AI_POLICY.md  CHANGELOG.md  CONTRIBUTING.md  FUNDING.json  LICENSE  README.md  devdeps.txt  duties.py  index.html  index.md  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  search.json  sitemap.xml  zensical.toml
.github/ISSUE_TEMPLATE/: 1-bug.md  bug_report.md  config.yml
.github/workflows/: ci.yml  dists.yml  release.yml
assets/javascripts/: bundle.0df4f2d0.min.js  bundle.fcb10c2a.min.js
changelog/: index.html
code_of_conduct/: index.html
config/: flake8.ini  mypy.ini  pytest.ini  ruff.toml
config/vscode/: launch.json
contributing/: index.html
coverage/: class_index.html  covindex.html  d_3066f438197cb952___init___py.html  d_3066f438197cb952_base_py.html  d_3066f438197cb952_bash_py.html  d_3066f438197cb952_console_py.html  d_3066f438197cb952_markdown_py.html  d_3066f438197cb952_pycon_py.html  d_3066f438197cb952_pyodide_py.html  d_3066f438197cb952_python_py.html  d_3066f438197cb952_sh_py.html  d_3066f438197cb952_tree_py.html  d_49b8b38e36e48c02_debug_py.html  d_49b8b38e36e48c02_extensions_py.html  d_49b8b38e36e48c02_logger_py.html  d_49b8b38e36e48c02_mkdocs_plugin_py.html  d_49b8b38e36e48c02_processors_py.html  d_49b8b38e36e48c02_rendering_py.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_test_base_formatter_py.html  d_a44f0ac069e85531_test_converter_py.html  d_a44f0ac069e85531_test_python_py.html  d_a44f0ac069e85531_test_shell_py.html  d_a44f0ac069e85531_test_toc_py.html  d_a44f0ac069e85531_test_tree_py.html  d_a44f0ac069e85531_test_validator_py.html  function_index.html  index.html  status.json  z_3066f438197cb952___init___py.html  z_3066f438197cb952__exec_python_py.html  z_3066f438197cb952_base_py.html  z_3066f438197cb952_bash_py.html  z_3066f438197cb952_console_py.html  z_3066f438197cb952_markdown_py.html  z_3066f438197cb952_pycon_py.html  z_3066f438197cb952_pyodide_py.html  z_3066f438197cb952_python_py.html  z_3066f438197cb952_sh_py.html  z_3066f438197cb952_tree_py.html  (+14 more)
credits/: index.html
docs/: credits.md  examples.md  gallery.md  schema.json  usage.md
docs/.overrides/partials/: comments.html
docs/insiders/: changelog.md  goals.yml  index.md  installation.md
docs/reference/: api.md
docs/snippets/: literate_markdown.md  platform_md.py  source.py  source.pycon
docs/snippets/gallery/: ansi.sh  argparse.py  argparse_format.py  d2.py  diagrams.py  expandable_filetree.py  hyperbolic.py  matplotlib.py  pydeps.py  pytermgui.py  rich.py  rich_terminal.py  runpy.py  textual.py
docs/snippets/usage/: boolean_matrix.py  hide.py  multiple.pycon  multiple.tscon  platform_html.py  source.tscon
docs/usage/: caching.md  index.md  pyodide.md  python.md  shell.md  tree.md  typescript.md
gallery/: index.html
insiders/: goals.yml  index.html
insiders/changelog/: index.html
insiders/installation/: index.html
license/: index.html
reference/: SUMMARY.txt
reference/SUMMARY/: index.html
reference/api/: index.html  index.md
reference/markdown_exec/: index.html
reference/markdown_exec/debug/: index.html
reference/markdown_exec/formatters/: index.html
reference/markdown_exec/formatters/base/: index.html
reference/markdown_exec/formatters/bash/: index.html
reference/markdown_exec/formatters/console/: index.html
reference/markdown_exec/formatters/markdown/: index.html
reference/markdown_exec/formatters/pycon/: index.html
reference/markdown_exec/formatters/pyodide/: index.html
reference/markdown_exec/formatters/python/: index.html
reference/markdown_exec/formatters/sh/: index.html
reference/markdown_exec/formatters/tree/: index.html
reference/markdown_exec/logger/: index.html
reference/markdown_exec/mkdocs_plugin/: index.html
reference/markdown_exec/processors/: index.html
reference/markdown_exec/rendering/: index.html
scripts/: gen_credits.py  gen_ref_nav.py  insiders.py  make  make.py  multirun.sh  setup.sh
search/: search_index.json
snippets/gallery/: chalk.py  diagrams.py  drawsvg.py  hyperbolic.py  plotly.py  pydeps.py  pytermgui.py  qrcode.py  rich.py
src/markdown_exec/: __init__.py  debug.py  logger.py  markdown_helpers.py  mkdocs_plugin.py  processors.py  pycon.py  pyodide.css  python.py  rendering.py  utils.py
src/markdown_exec/_internal/: cache.py  debug.py  logger.py  main.py  mkdocs_plugin.py  processors.py  rendering.py
src/markdown_exec/_internal/formatters/: __init__.py  _exec_python.py  base.py  bash.py  console.py  markdown.py  pycon.py  pyodide.py  python.py  sh.py  tree.py
src/markdown_exec/assets/: pyodide.js
src/markdown_exec/formatters/: __init__.py  _exec_python.py  base.py  bash.py  console.py  jupyter.py  markdown.py  pycon.py  pyodide.py  python.py  sh.py  tree.py  tscon.py  typescript.py
tests/: __init__.py  conftest.py  test_api.py  test_base_formatter.py  test_cache.py  test_converter.py  test_headings.py  test_python.py  test_shell.py  test_toc.py  test_tree.py  test_typescript.py  test_validator.py
usage/: index.html
usage/pyodide/: index.html
usage/python/: index.html
usage/shell/: index.html
usage/tree/: index.html
