[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "markdown-exec"
description = "Utilities to execute code blocks in Markdown files."
authors = [{name = "Timothée Mazzucotelli", email = "dev@pawamoy.fr"}]
license = {text = "ISC"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["markdown", "python", "exec", "shell", "bash", "mkdocs"]
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "pymdown-extensions>=9",
]

[project.optional-dependencies]
ansi = ["pygments-ansi-color"]

[project.urls]
Homepage = "https://pawamoy.github.io/markdown-exec"
Documentation = "https://pawamoy.github.io/markdown-exec"
Changelog = "https://pawamoy.github.io/markdown-exec/changelog"
Repository = "https://github.com/pawamoy/markdown-exec"
Issues = "https://github.com/pawamoy/markdown-exec/issues"
Discussions = "https://github.com/pawamoy/markdown-exec/discussions"
Gitter = "https://gitter.im/markdown-exec/community"
Funding = "https://github.com/sponsors/pawamoy"

[project.entry-points."mkdocs.plugins"]
markdown-exec = "markdown_exec.mkdocs_plugin:MarkdownExecPlugin"

[tool.pdm]
version = {source = "scm"}

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"

# Include as much as possible in the source distribution, to help redistributors.
excludes = ["**/.pytest_cache"]
source-includes = [
    "config",
    "docs",
    "scripts",
    "share",
    "tests",
    "duties.py",
    "mkdocs.yml",
    "*.md",
    "LICENSE",
]

[tool.pdm.build.wheel-data]
# Manual pages can be included in the wheel.
# Depending on the installation tool, they will be accessible to users.
# pipx supports it, uv does not yet, see https://github.com/astral-sh/uv/issues/4731.
data = [
    {path = "share/**/*", relative-to = "."},
]

[dependency-groups]
dev = [
    # dev
    "editables>=0.5",

    # maintenance
    "build>=1.2",
    "git-changelog>=2.5",
    "twine>=5.1",

    # ci
    "duty>=1.4",
    "ruff>=0.4",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.6",
    "mypy>=1.10",
    "types-markdown>=3.6",
    "types-pyyaml>=6.0",

    # docs
    "black>=24.4",
    "markdown-callouts>=0.4",
    "markdown-exec>=1.8",
    "mkdocs>=1.6",
    "mkdocs-coverage>=1.0",
    "mkdocs-gen-files>=0.5",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-material>=9.5",
    "mkdocs-minify-plugin>=0.8",
    "mkdocstrings[python]>=0.25",
    # YORE: EOL 3.10: Remove line.
    "tomli>=2.0; python_version < '3.11'",

    # docs gallery
    "pydeps>=1.12; python_version < '3.13'",
    "diagrams>=0.21; python_version < '3.13'",
    "rich>=12.3; python_version < '3.13'",
    "matplotlib>=3.5; python_version < '3.13'",
    "numpy>=1.24.4; python_version < '3.13'",
    "textual>=0.67; python_version < '3.13'",
    "pytermgui>=6.3; python_version < '3.13'",
    "pipdeptree>=2.6; python_version < '3.13'",
    "pip>=24; python_version < '3.13'",
    "pygments>=2.15; python_version < '3.13'",
    "drawsvg>=2.3; python_version < '3.13'",
    "hyperbolic>=2.0; python_version < '3.13'",
    "qrcode>=7.4; python_version < '3.13'",
    "plotly>=5.22; python_version < '3.13'",
    "pandas>=2.2; python_version < '3.13'",
    "chalk-diagrams>=0.2; python_version < '3.13'",
]